fix: galery scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ font-family: 'Reem Kufi', sans-serif; */
 body {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth
 }
 
 :root {
@@ -324,7 +325,7 @@ nav ul li a {
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 7px;
-  height: 5px;
+  height: 6px;
   background: var(--greyOpacity);
   border-radius: 15px;
 }
@@ -438,8 +439,6 @@ nav ul li a {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background: transparent;
   }
 
   nav {
